syntax = "proto3";
package mtikv_cli;

option java_multiple_files = true;
option java_package = "mtikv";

enum Error {
    SUCCESS = 0;
    FAILED = 1;
    INVALID = 2;
}

message BeginTxnRequest{}
message BeginTxnResponse{
    uint64 transID = 1;
}

message CommitTxnRequest{
    uint64 transID = 1;
}
message CommitTxnResponse{
    uint64 transID = 1;
    Error error = 2;
}

message RollBackTxnRequest{
    uint64 transID = 1;
}
message RollBackTxnResponse{
    uint64 transID = 1;
    Error error = 2;
}

message GetRequest{
    uint64 transID = 1;
    bytes key = 2;
}
message GetResponse{
    uint64 transID = 1;
    bytes value = 2;
    Error error = 3;
}

message SetRequest{
    uint64 transID = 1;
    bytes key = 2;
    bytes value = 3;
}
message SetResponse{
    uint64 transID = 1;
    Error error = 2;
}

message DeleteRequest{
    uint64 transID = 1;
    bytes key = 2;
}
message DeleteResponse{
    uint64 transID = 1;
    Error error = 2;
}

service MTikvCli{
    rpc BeginTxn (BeginTxnRequest) returns (BeginTxnResponse) {}
    rpc CommitTxn (CommitTxnRequest) returns (CommitTxnResponse){}
    rpc RollBackTxn(RollBackTxnRequest) returns (RollBackTxnResponse){}
    rpc Set(SetRequest) returns (SetResponse){}
    rpc Get(GetRequest) returns (GetResponse){}
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
}